cmake_minimum_required(VERSION 3.10)
project(finiteVolumeSolver)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(Grids)
add_subdirectory(OutputUtilities)
add_subdirectory(DiffusionOperators)
add_subdirectory(AdvectionOperators)
add_subdirectory(TimeIntegrators)
find_package(Eigen3 3.3)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "../bin")
add_executable(finiteVolumeSolver main.cpp Grids/Grid.cpp Grids/Grid.h Grids/CartesianGrid.cpp Grids/CartesianGrid.h OutputUtilities/OutputUtilities.cpp OutputUtilities/OutputUtilities.h AdvectionOperators/AdvectionOperator.cpp AdvectionOperators/AdvectionOperator.h AdvectionOperators/AdvectionUpwind.cpp AdvectionOperators/AdvectionUpwind.h TimeIntegrators/TimeIntegrator.cpp TimeIntegrators/TimeIntegrator.h TimeIntegrators/ForwardEuler.cpp TimeIntegrators/ForwardEuler.h Grids/PlottingGrid.cpp Grids/PlottingGrid.h)
target_link_libraries(finiteVolumeSolver Eigen3::Eigen)